Table overflow corrected. Now page expand to the table size

--- a/trunk/src/main/webapp/styles/common/table.css
+++ b/trunk/src/main/webapp/styles/common/table.css
@@ -88,4 +88,5 @@ div[contentEditable=true] {
 textarea.comment {
 	width: 100%;
 	height: 100%;
+	min-width: 200px;
 }
